# AutoROM

./: .gitignore  .travis.yml  AutoRom  AutoRom.py  LICENSE.txt  MANIFEST.in  README.md  autorom.py  link_map.txt  links.txt  macos_test.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-publish.yml  linux_test.yml  test.yml
AutoROM/: AutoROM.py  checksums.txt  link_map.txt  smoke_test.py  test.rar
AutoROM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
AutoROM/licensed/: AutoROM.py  setup.py
AutoROM/roms/: __init__.py
resource/: README.md  Roms.tar.gz.b64.enc  Roms.tar.gz.enc.b64  Roms.tar.gz.torrent  alternate_download.sh  readme.md
scripts/: build-dist.sh  build-sdist.sh  ci-test.sh  torrent_tar.py
src/: AutoROM.py
torrent/: Roms.tar.gz.torrent
