[metadata]
license = MIT
license_file = LICENSE.txt
author = Farama Foundation
author_email = jkterry@farama.org
version = file: version.txt
description = Automated installation of Atari ROMs for Gym/ALE-Py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Farama-Foundation/AutoROM
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    Reinforcement Learning
    game
    RL
    AI
    gym

[options]
python_requires = >=3.6
zip_safe = False
install_requires =
    click
    requests
    tqdm
    wget
    libtorrent
    importlib-resources; python_version < '3.9'

[options.extras_require]
tests =
    ale_py
    multi_agent_ale_py
